fix alignments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,13 +72,13 @@ input {border:none;}
 .wrap-user .user .handle-main {float:left; margin-right:10px;}
 .wrap-user .user img {width: 35px; margin-right:7px;}
 .nominate {margin-top:5px;}
-.nominate li {float:left; background-color:#f7f7f7; font-size:12px; color:#666; line-height:16px; margin-right:5px;}
+.nominate li {float:left; background-color:#f7f7f7; font-size:12px; color:#666; line-height:16px; margin: 1px 5px 0 0; }
 .nominate li span {padding:3px; float:left; margin-right:3px;}
 .nominate li a .genericon {color:#fff;}
 .nominate li .genericon-collapse {background-color:#8ac249;}
 .nominate li .genericon-expand {background-color:#33429a;}
 
-.wrap-user .time-tw {float:right; width: 25%; text-align:right; color:#33429a; padding-right:10px;}
+.wrap-user .time-tw {float:right; width: 25%; text-align:right; color:#33429a; padding-right:10px; margin-top: 7px;}
 .wrap-user .time-tw span {padding-top:3px; color:#8ac249;}
 .wrap-con-tw {font-family: 'Raleway', sans-serif; background-color:#f7f7f7; padding: 10px; margin-bottom:30px;}
 .wrap-con-tw a {color:#33429a;}
